--- a/index.html
+++ b/index.html
@@ -61,53 +61,45 @@
   <!-- Navbar -->
 
   <!-- Photo -->
-  <div class="jumbotron text-center" data-aos="fade-in">
-    <img src="assets/photo kotak.jpg" alt="Ferry Nurqadar" width="200"
-      class="rounded-circle border border-dark shadow-lg">
-    <h1 class="display-4">Ferry Nurqadar</h1>
-    <p class="fs-2 fw-light">Security Engineer</p>
+  <section class="jumbotron" id="jumbotron">
+    <div class="container">
+      <div class="text-center" data-aos="fade-in">
+        <img src="assets/photo kotak.jpg" alt="Ferry Nurqadar" width="200"
+          class="rounded-circle border border-dark shadow-lg">
+        <br>
+        <h1 class="display-4">Ferry Nurqadar</h1>
+        <p class="fs-2 fw-light">Security Engineer, Pentesting</p>
+        <div class="row justify-content-center p-3">
+          <div class="col-md-6">
+            <p class="about_text">Mahasiswa Cyber Security dari Universitas Bina Nusantara. Memiliki
+              ketertarikan
+              dengan
+              dunia Cyber. Memiliki kemampuan dibidang Cyber Defense, Offensive Security, Pentesting, Digital Forensics,
+              Kali
+              Linux dan Programming Language.</p>
+            <!-- <div class="row justify-content-center p-3">
+      <div class="col-md-4">
+      </div>
+    </div> -->
+          </div>
+        </div>
+      </div>
+    </div>
     <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320">
       <path fill="#273036" fill-opacity="1"
         d="M0,256L48,229.3C96,203,192,149,288,149.3C384,149,480,203,576,192C672,181,768,107,864,106.7C960,107,1056,181,1152,202.7C1248,224,1344,192,1392,176L1440,160L1440,320L1392,320C1344,320,1248,320,1152,320C1056,320,960,320,864,320C768,320,672,320,576,320C480,320,384,320,288,320C192,320,96,320,48,320L0,320Z">
       </path>
     </svg>
-  </div>
-  <!-- Photo -->
-
-  <!-- About -->
-  <div class="about" id="about">
-    <div class="container" data-aos="fade-in">
-      <div class="row">
-        <div class="col">
-          <h1 class="text-white text-center">ABOUT</h1>
-          <br>
-        </div>
-      </div>
-      <div class="row justify-content-center p-3">
-        <div class="col-md-4 ">
-          <p class="text-white">Hi there! my name is Ferry Nurqadar</p>
-        </div>
-        <div class="col-md-4">
-          <p class="text-white">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Odio, vitae porro molestiae et
-            illo mollitia sed veniam! Omnis et itaque minus tempore inventore accusantium iste deleniti voluptates
-            numquam! Optio, consequatur.</p>
-        </div>
-      </div>
     </div>
-    <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320">
-      <path fill="#cccccc" fill-opacity="1"
-        d="M0,64L26.7,90.7C53.3,117,107,171,160,202.7C213.3,235,267,245,320,224C373.3,203,427,149,480,133.3C533.3,117,587,139,640,138.7C693.3,139,747,117,800,112C853.3,107,907,117,960,133.3C1013.3,149,1067,171,1120,186.7C1173.3,203,1227,213,1280,202.7C1333.3,192,1387,160,1413,144L1440,128L1440,320L1413.3,320C1386.7,320,1333,320,1280,320C1226.7,320,1173,320,1120,320C1066.7,320,1013,320,960,320C906.7,320,853,320,800,320C746.7,320,693,320,640,320C586.7,320,533,320,480,320C426.7,320,373,320,320,320C266.7,320,213,320,160,320C106.7,320,53,320,27,320L0,320Z">
-      </path>
-    </svg>
-  </div>
-  <!-- About -->
+  </section>
+  <!-- Photo -->
 
   <!-- Skills -->
   <section class="skills1" id="skills">
     <div class="container">
       <div class="row">
         <div class="col">
-          <h1 class="text-center" data-aos="flip-down">PROGRAMMING LANGUAGE</h1>
+          <h1 class="text-center text-white" data-aos="flip-down">PROGRAMMING LANGUAGE</h1>
           <br>
           <br>
         </div>
@@ -117,7 +109,7 @@
           <div class="card">
             <img src="assets/C.png" class="cartd-img-op shadow-lg " alt="C">
             <div class="card-body shadow-lg" style="background-color: #c1c1c1;">
-              <h5 class="card-title">C</h5>
+              <a href="https://www.sololearn.com/Certificate/CT-TGJEIJVQ/jpg" class="text_link">C</a>
             </div>
           </div>
         </div>
@@ -141,7 +133,7 @@
           <div class="card">
             <img src="assets/PHP.png" class="cartd-img-op shadow-lg " alt="PHP">
             <div class="card-body shadow-lg" style="background-color: #c1c1c1;">
-              <h5 class="card-title">PHP</h5>
+              <a href="https://www.sololearn.com/certificates/CT-RQAYFV1I" class="text_link">PHP</a>
             </div>
           </div>
         </div>
@@ -169,7 +161,7 @@
             <br>
             <br>
             <br>
-            <h1 class="text-center" data-aos="flip-down">CYBER SECURITY</h1>
+            <h1 class="text-center text-white" data-aos="flip-down">CYBER SECURITY</h1>
             <br>
           </div>
         </div>
@@ -178,7 +170,8 @@
             <div class="card">
               <img src="assets/CYBER.png" class="cartd-img-op shadow-lg " alt="CYBER">
               <div class="card-body shadow-lg" style="background-color: #c1c1c1;">
-                <h5 class="card-title">Cyber Defense</h5>
+                <a href="https://tryhackme-certificates.s3-eu-west-1.amazonaws.com/THM-SMIV2OZOYH.png"
+                  class="text_link">Cyber Defense</a>
               </div>
             </div>
           </div>
@@ -186,7 +179,8 @@
             <div class="card">
               <img src="assets/Offensive.png" class="cartd-img-op shadow-lg " alt="Offensive">
               <div class="card-body shadow-lg" style="background-color: #c1c1c1;">
-                <h5 class="card-title">Offensive Pentesting</h5>
+                <a href="https://tryhackme-certificates.s3-eu-west-1.amazonaws.com/THM-NJSNPAHOZC.png"
+                  class="text_link">Jr Penetration Tester</a>
               </div>
             </div>
           </div>
@@ -194,8 +188,8 @@
       </div>
     </div>
     <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320">
-      <path fill="#273036" fill-opacity="1"
-        d="M0,160L26.7,160C53.3,160,107,160,160,176C213.3,192,267,224,320,197.3C373.3,171,427,85,480,74.7C533.3,64,587,128,640,154.7C693.3,181,747,171,800,165.3C853.3,160,907,160,960,144C1013.3,128,1067,96,1120,101.3C1173.3,107,1227,149,1280,186.7C1333.3,224,1387,256,1413,272L1440,288L1440,320L1413.3,320C1386.7,320,1333,320,1280,320C1226.7,320,1173,320,1120,320C1066.7,320,1013,320,960,320C906.7,320,853,320,800,320C746.7,320,693,320,640,320C586.7,320,533,320,480,320C426.7,320,373,320,320,320C266.7,320,213,320,160,320C106.7,320,53,320,27,320L0,320Z">
+      <path fill="#cccccc" fill-opacity="1"
+        d="M0,64L26.7,90.7C53.3,117,107,171,160,202.7C213.3,235,267,245,320,224C373.3,203,427,149,480,133.3C533.3,117,587,139,640,138.7C693.3,139,747,117,800,112C853.3,107,907,117,960,133.3C1013.3,149,1067,171,1120,186.7C1173.3,203,1227,213,1280,202.7C1333.3,192,1387,160,1413,144L1440,128L1440,320L1413.3,320C1386.7,320,1333,320,1280,320C1226.7,320,1173,320,1120,320C1066.7,320,1013,320,960,320C906.7,320,853,320,800,320C746.7,320,693,320,640,320C586.7,320,533,320,480,320C426.7,320,373,320,320,320C266.7,320,213,320,160,320C106.7,320,53,320,27,320L0,320Z">
       </path>
     </svg>
   </section>
@@ -206,7 +200,7 @@
     <div class="container">
       <div class="row">
         <div class="col">
-          <h1 class="text-center text-white" data-aos="fade-up">PROJECTS</h1>
+          <h1 class="text-center text-black" data-aos="fade-up">PROJECTS</h1>
         </div>
       </div>
       <br>
@@ -253,8 +247,8 @@
       </div>
     </div>
     <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320">
-      <path fill="#cccccc" fill-opacity="1"
-        d="M0,256L26.7,224C53.3,192,107,128,160,90.7C213.3,53,267,43,320,69.3C373.3,96,427,160,480,202.7C533.3,245,587,267,640,240C693.3,213,747,139,800,128C853.3,117,907,171,960,176C1013.3,181,1067,139,1120,122.7C1173.3,107,1227,117,1280,133.3C1333.3,149,1387,171,1413,181.3L1440,192L1440,320L1413.3,320C1386.7,320,1333,320,1280,320C1226.7,320,1173,320,1120,320C1066.7,320,1013,320,960,320C906.7,320,853,320,800,320C746.7,320,693,320,640,320C586.7,320,533,320,480,320C426.7,320,373,320,320,320C266.7,320,213,320,160,320C106.7,320,53,320,27,320L0,320Z">
+      <path fill="#273036" fill-opacity="1"
+        d="M0,160L26.7,160C53.3,160,107,160,160,176C213.3,192,267,224,320,197.3C373.3,171,427,85,480,74.7C533.3,64,587,128,640,154.7C693.3,181,747,171,800,165.3C853.3,160,907,160,960,144C1013.3,128,1067,96,1120,101.3C1173.3,107,1227,149,1280,186.7C1333.3,224,1387,256,1413,272L1440,288L1440,320L1413.3,320C1386.7,320,1333,320,1280,320C1226.7,320,1173,320,1120,320C1066.7,320,1013,320,960,320C906.7,320,853,320,800,320C746.7,320,693,320,640,320C586.7,320,533,320,480,320C426.7,320,373,320,320,320C266.7,320,213,320,160,320C106.7,320,53,320,27,320L0,320Z">
       </path>
     </svg>
   </section>
@@ -265,25 +259,25 @@
     <div class="container">
       <div class="row p-3">
         <div class="col-md">
-          <h1 class="text-center" data-aos="fade-up">CONTACT</h1>
+          <h1 class="text-center text-white" data-aos="fade-up">CONTACT</h1>
         </div>
       </div>
       <div class="row justify-content-center">
         <div class="col-5">
-          <div class="alert alert-success alert-dismissible fade show d-none my-alert" role="alert">
+          <div class="alert alert-success alert-dismissible fade show d-none my-alert text-white" role="alert">
             <strong>Thank You!</strong> Your message has been sent.
             <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
           </div>
           <form name="submit-to-google-sheet">
-            <div class="mb-3" data-aos="fade-up">
+            <div class="mb-3 text-white" data-aos="fade-up">
               <label for="Name" class="form-label">Name</label>
               <input type="text" class="form-control" id="Name" aria-describedby="emailHelp" name="nama">
             </div>
-            <div class="mb-3" data-aos="fade-up">
+            <div class="mb-3 text-white" data-aos="fade-up">
               <label for="Email" class="form-label">Email</label>
               <input type="email" class="form-control" id="Email" name="email">
             </div>
-            <div class="mb-3" data-aos="fade-up">
+            <div class="mb-3 text-white" data-aos="fade-up">
               <label for="exampleFormControlTextarea1" class="form-label">Message</label>
               <textarea class="form-control" id="exampleFormControlTextarea1" rows="3" name="pesan"></textarea>
             </div>
@@ -339,8 +333,8 @@
       </div>
     </div>
     <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320">
-      <path fill="#273036" fill-opacity="1"
-        d="M0,96L26.7,112C53.3,128,107,160,160,154.7C213.3,149,267,107,320,80C373.3,53,427,43,480,74.7C533.3,107,587,181,640,197.3C693.3,213,747,171,800,165.3C853.3,160,907,192,960,186.7C1013.3,181,1067,139,1120,149.3C1173.3,160,1227,224,1280,229.3C1333.3,235,1387,181,1413,154.7L1440,128L1440,320L1413.3,320C1386.7,320,1333,320,1280,320C1226.7,320,1173,320,1120,320C1066.7,320,1013,320,960,320C906.7,320,853,320,800,320C746.7,320,693,320,640,320C586.7,320,533,320,480,320C426.7,320,373,320,320,320C266.7,320,213,320,160,320C106.7,320,53,320,27,320L0,320Z">
+      <path fill="#cccccc" fill-opacity="1"
+        d="M0,256L26.7,224C53.3,192,107,128,160,90.7C213.3,53,267,43,320,69.3C373.3,96,427,160,480,202.7C533.3,245,587,267,640,240C693.3,213,747,139,800,128C853.3,117,907,171,960,176C1013.3,181,1067,139,1120,122.7C1173.3,107,1227,117,1280,133.3C1333.3,149,1387,171,1413,181.3L1440,192L1440,320L1413.3,320C1386.7,320,1333,320,1280,320C1226.7,320,1173,320,1120,320C1066.7,320,1013,320,960,320C906.7,320,853,320,800,320C746.7,320,693,320,640,320C586.7,320,533,320,480,320C426.7,320,373,320,320,320C266.7,320,213,320,160,320C106.7,320,53,320,27,320L0,320Z">
       </path>
     </svg>
   </div>
@@ -348,7 +342,7 @@
 
   <!-- Footer -->
   <footer class="footer1 pb-3">
-    <p class="text-center text-white">Created by <a href="https://www.instagram.com/marmut_handsome/"
+    <p class="text-center text-black">Created by <a href="https://www.instagram.com/marmut_handsome/"
         class="fw-bold">Ferry Nurqadar</a></p>
   </footer>
   <!-- Footer -->
